<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_perfil_actividad"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/blanco"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="20dp"
        tools:ignore="UselessParent">

        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewUsuarioCorreo"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/common_google_signin_btn_text_light_pressed"
            android:textSize="22sp"
            android:fontFamily="sans-serif-condensed"
            tools:ignore="HardcodedText,UnusedAttribute"
            android:layout_marginBottom="15dp" />

        <EditText
            android:text="@string/nombreEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:id="@+id/nombreEditText"
            android:hint="@string/hintUsuario"
            android:layout_marginBottom="15dp" />

        <EditText
            android:text="@string/direccionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:id="@+id/direccionEditText"
            android:hint="@string/hintUsuario"
            android:layout_marginBottom="15dp" />

        <Button
            android:text="@string/botonGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/botonGuardar"
            android:textColor="@android:color/white"
            android:background="?attr/actionModeSplitBackground"
            android:layout_marginBottom="15dp" />

        <Button
            android:text="@string/botonLogout"
            android:layout_gravity="center"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:id="@+id/botonLogout"
            android:textColor="@android:color/white"
            android:background="?attr/actionModeSplitBackground"
            android:layout_marginBottom="15dp" />

    </LinearLayout>

</RelativeLayout>
