<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/grisBajo">

    <TextView
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editText13"
        android:text="@string/versionApp"
        android:textColor="@color/grisAlto"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp" />

    <LinearLayout
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingBottom="20dp"
        android:paddingEnd="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingStart="20dp"
        android:paddingTop="15dp">

        <TextView
            android:text="@string/textoIrLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:id="@+id/textoIrLogin"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/blanco"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textSize="22sp"
            android:textColor="@color/blanco"
            tools:ignore="HardcodedText" />

        <Button
            android:text="@string/botonIrRegistroCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/botonIrRegistroCliente"
            android:textColor="?attr/actionModeSplitBackground"
            android:background="@android:color/white"
            android:layout_marginBottom="15dp"
            android:fontFamily="sans-serif-medium"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textSize="22sp"
            android:textColor="@color/blanco"
            tools:ignore="HardcodedText" />

        <Button
            android:text="@string/botonIrRegistroServicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/botonIrRegistroServicio"
            android:textColor="?attr/actionModeSplitBackground"
            android:background="@android:color/white"
            android:layout_marginBottom="15dp"
            android:textSize="14sp" />

    </LinearLayout>

</RelativeLayout>